--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-## CONFIGURAÇÃO PRA APONTAMENTO DE BANCO DE DADOS (USANDO .PROPERTIES)
-
+##CONFIGURACAO DE APONTAMENTO DATABASE
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/vollmed_api
 spring.datasource.username=root
@@ -8,9 +7,10 @@ spring.datasource.password=@10PEdenada
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Caso precisemos traduzir os nomes chaves da funcionalidade do Pageable, basta definir como:
-#spring.data.web.pageable.page-parameter=pagina
-#spring.data.web.pageable.size-parameter=tamanho
-#spring.data.web.sort.sort-parameter=ordem
+server.error.include-stacktrace=never
+
+#spring.flyway.validateOnMigrate=false
+
+api.security.token.secret=${JWT_SECRET:12345678}
 
 
